--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:fillViewport="true"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -56,7 +62,7 @@
                 android:textColorHint="@color/black" />
 
             <EditText
-                android:id="@+id/signInEmail"
+                android:id="@+id/signUpEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -71,7 +77,7 @@
                 tools:ignore="DuplicateSpeakableTextCheck" />
 
             <EditText
-                android:id="@+id/signInPassword"
+                android:id="@+id/signUpPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -95,6 +101,12 @@
         android:layout_height="wrap_content"
         android:text="@string/name"
         android:textSize="24sp"
+        android:stateListAnimator="@null"
+        android:elevation="10dp"
+        android:shadowColor="@color/black"
+        android:shadowDx="10"
+        android:shadowDy="10"
+        android:shadowRadius="70"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,7 +118,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:elevation="10dp"
+        android:elevation="20dp"
         android:shadowColor="#8F8888"
         android:shadowDx="10"
         android:shadowDy="10"
@@ -123,9 +135,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:stateListAnimator="@null"
+        android:elevation="20dp"
         android:text="@string/already"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signUpButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
+</ScrollView>
