--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,7 +11,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpActivity">
+    tools:context=".Activity.SignUpActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -48,7 +48,7 @@
 
 
             <EditText
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/signUpName"
                 android:layout_width="244dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
