--- a/app/src/main/res/layout/sent.xml
+++ b/app/src/main/res/layout/sent.xml
@@ -6,7 +6,7 @@
     android:layout_height="50dp">
 
     <TextView
-        android:id="@+id/receiveText"
+        android:id="@+id/sentText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/sent"
